added new function hunterSample

--- a/README.Rmd
+++ b/README.Rmd
@@ -36,6 +36,7 @@ Tasks that can be accomplished with this package include:
 * Exploration of specific errors with `findDuplicates`, `youthHunters`, and `outOfStateHunters`
 * Detailed error reporting with `errorTable`, `pullErrors`, and `redFlags`
 * Automated report writing with `writeReport`
+* Random sampling with `hunterSample`
 
 ## Installation
 
