--- a/vignettes/migbirdHarvestData_workflow.Rmd
+++ b/vignettes/migbirdHarvestData_workflow.Rmd
@@ -32,8 +32,9 @@ vignette: >
     - [redFlags](#redflags)
 - [Stage 4: Correct and Compare](#stage-4-correct-and-compare)
     - [correct](#correct)
-- [Stage 5: Write Reports](#stage-5-write-reports)
+- [Stage 5: Write and Sample](#stage-5-write-and-sample)
     - [writeReport](#writereport)
+    - [hunterSample](#huntersample)
 - [Troubleshooting](#troubleshooting)
     - [Common read_hip warnings](#common-read_hip-warnings)
     - [Memory problems](#memory-problems)
@@ -62,6 +63,11 @@ The first step is to import .txt files containing HIP data. To do this, we use t
 library(migbirdHarvestData)
 
 DL1202 <- read_hip("C:/HIP/DL_1202")
+```
+
+```
+## Error: Can't subset columns that don't exist.
+## [31mx[39m Column `dl_states` doesn't exist.
 ```
 
 Did you get a warning or three? Read an explanation of common `read_hip` warnings, [below](#common-read_hip-warnings).
@@ -644,7 +650,7 @@ The year of the Harvest Information Program must be supplied as a parameter. Sin
 
 All functions in <b>Stage 2</b> and <b>Stage 3</b> will run on the corrected tibble, DL1202_corrected, just as they worked on the example tibble DL1202_proofed. Errors can be compared between the proofed stage and corrected stage to get a better idea of which errors were serious (i.e., difficult to correct automatically) and determine how serious errors can be prevented in the future.
 
-## Stage 5: Write Reports
+## Stage 5: Write and Sample
 
 ### writeReport
 
@@ -661,6 +667,15 @@ writeReport(
   yr = 2019,
   dir = "H:/r_projects/hip_data/script",
   file = "gadget")
+```
+
+### hunterSample
+
+After correcting the data, the `hunterSample` function subsets hunters without any errors in their records, ensuring each hunter has a valid mailing address, email address, registration year, and issue date. The function can be run with or without the "random" parameter. If the "random" parameter is used, the specified number of records will be randomly sampled from the corrected data (a non-reproducible event). Without specifying "random", all valid hunters in the data will be returned.
+
+
+```r
+hunterSample(DL1202_corrected, random = 100)
 ```
 
 ## Troubleshooting
