function investigate: added source file to the output, so for vertical repetition, the file(s) in which the repeated value occurred will be returned along with what specific value was repeated

--- a/vignettes/migbirdHarvestData_workflow.Rmd
+++ b/vignettes/migbirdHarvestData_workflow.Rmd
@@ -369,10 +369,10 @@ investigate(DL1202_tidied, loc = "TX", period_type = "dl_date", period = "202012
 ```
 
 ```
-## # A tibble: 1 x 1
-##   cranes
-##   <chr> 
-## 1 0
+## # A tibble: 1 x 2
+##   cranes source_file   
+##   <chr>  <chr>         
+## 1 0      TX20201216.txt
 ```
 
 ### errorTable
