--- a/vignettes/migbirdHarvestData_workflow.Rmd
+++ b/vignettes/migbirdHarvestData_workflow.Rmd
@@ -15,21 +15,21 @@ vignette: >
 - [Stage 1: Import Data](#stage-1-import-data)
     - [read_hip](#read_hip)
     - [tidy](#tidy)
-    - [validate](#validate)
     - [strataCheck](#stratacheck)
-    - [proof](#proof)
-- [Stage 2: Visualize Data](#stage-2-visualize-data)
-    - [errorPlot_fields](#errorplot_fields)
-    - [errorPlot_states](#errorplot_states)
-    - [findDuplicates](#findduplicates)
-    - [outOfStateHunters](#outofstatehunters)
-    - [youthHunters](#youthhunters)
-    - [errorPlot_dl](#errorplot_dl)
-- [Stage 3: Explore Errors](#stage-3-explore-errors)
+    - [validate](#validate)
     - [investigate](#investigate)
+- [Stage 2: Explore Errors](#stage-2-explore-errors)
+    - [proof](#proof)
     - [errorTable](#errortable)
     - [pullErrors](#pullerrors)
     - [redFlags](#redflags)
+- [Stage 3: Visualize Data](#stage-3-visualize-data)
+    - [findDuplicates](#findduplicates)
+    - [errorPlot_fields](#errorplot_fields)
+    - [errorPlot_states](#errorplot_states)
+    - [outOfStateHunters](#outofstatehunters)
+    - [youthHunters](#youthhunters)
+    - [errorPlot_dl](#errorplot_dl)
 - [Stage 4: Correct and Compare](#stage-4-correct-and-compare)
     - [correct](#correct)
     - [manualFix](#manualfix)
@@ -86,6 +86,34 @@ This function renames columns and does simple mutations, such as:
 * Moves suffixes from first or last name columns to the appropriate suffix column
 * Removes punctuation from middle initial column
 * Removes ending hyphen from zip codes with only 5 digits
+
+### strataCheck
+
+Running `strataCheck` ensures species "bag" values are in order. This function searches for values in species group columns that are not typical or expected by the FWS. If a value outside of the normal range is detected, an output tibble is created. Each row in the output contains the state, species, unusual stratum value, and a list of the normal values we would expect.
+
+If a value for a species group is given in the HIP data that doesn't match anything in our records, the species reported in the output will have NA values in the "normal_strata" column. These species are not hunted in the reported states.
+
+
+```r
+strataCheck(DL1202_tidied)
+```
+
+```
+## # A tibble: 285 x 4
+##    dl_state spp                state_strata normal_strata   
+##    <chr>    <chr>              <chr>        <chr>           
+##  1 OR       dove_bag           0            1, 2, 3, 5      
+##  2 OR       ducks_bag          0            1, 2, 3, 4      
+##  3 OR       geese_bag          0            1, 2, 3, 4      
+##  4 OR       band_tailed_pigeon 0            1, 2            
+##  5 OR       brant              0            1, 2            
+##  6 OR       seaducks           0            1, 2            
+##  7 MO       dove_bag           9            0, 1, 2, 3, 5   
+##  8 NE       dove_bag           9            0, 1, 2, 3, 5   
+##  9 MO       woodcock_bag       9            0, 1, 2, 3, 4, 5
+## 10 NE       woodcock_bag       6            0, 1, 2, 3, 4, 5
+## # ... with 275 more rows
+```
 
 ### validate
 
@@ -154,35 +182,25 @@ validate(DL1202_tidied, type = "horizontal")
 
 If there are no repetitions, a positive message will be returned.
 
-Tibbles of vertical repetition returned from this function can be looked at more closely using `investigate` (see Stage 3: [investigate](#investigate)).
+Tibbles of vertical repetition returned from this function can be looked at more closely using `investigate`.
 
-### strataCheck
+### investigate
 
-Running `strataCheck` is the last step we must do to ensure the data are in order. This function searches for values in species group columns that are not typical or expected by the FWS. If a value outside of the normal strata is given, the output tibble will create a row for it. The row will contain the state, species, unusual stratum value, and a column called "normal_strata" with the typical values we would expect.
-
-If a value for a species group is given in the HIP data that doesn't match anything in our records, the species reported in the output will have NA values in the "normal_strata" column. These species are not hunted in the reported states.
+Did the `validate` function return repeated values? Are some of those values a high number that are uniform and need to be looked at more closely? The `investigate` function allows you to see what value was vertically repeated for a species. Parameters required are download state, type of download time period, value of the download date or download cycle, and species, which are all provided in the output of `validate`.
 
 
 ```r
-strataCheck(DL1202_tidied)
+investigate(DL1202_tidied, loc = "TX", period_type = "dl_date", period = "20201216", species = "cranes")
 ```
 
 ```
-## # A tibble: 285 x 4
-##    dl_state spp                state_strata normal_strata   
-##    <chr>    <chr>              <chr>        <chr>           
-##  1 OR       dove_bag           0            1, 2, 3, 5      
-##  2 OR       ducks_bag          0            1, 2, 3, 4      
-##  3 OR       geese_bag          0            1, 2, 3, 4      
-##  4 OR       band_tailed_pigeon 0            1, 2            
-##  5 OR       brant              0            1, 2            
-##  6 OR       seaducks           0            1, 2            
-##  7 MO       dove_bag           9            0, 1, 2, 3, 5   
-##  8 NE       dove_bag           9            0, 1, 2, 3, 5   
-##  9 MO       woodcock_bag       9            0, 1, 2, 3, 4, 5
-## 10 NE       woodcock_bag       6            0, 1, 2, 3, 4, 5
-## # ... with 275 more rows
+## # A tibble: 1 x 2
+##   cranes source_file   
+##   <chr>  <chr>         
+## 1 0      TX20201216.txt
 ```
+
+## Stage 2: Explore Errors
 
 ### proof
 
@@ -196,184 +214,6 @@ DL1202_proofed <- proof(DL1202_tidied, year = 2020)
 Data that are considered irregular are flagged in a new column called "errors". No actual corrections take place in this step; all data remain identical except for the new "errors" column. For each field, values are compared to standard expected formats and if they do not conform, the field name is pasted as a string in the "errors" column. Each row can have from zero errors (NA) to all column names listed. Multiple flags are hyphen delimited.
 
 The year of the Harvest Information Program must be supplied as a parameter. This aids in checking dates when licenses were issued, as one example.
-
-## Stage 2: Visualize Data
-
-### errorPlot_fields
-
-The `errorPlot_fields` function can be run on all states...
-
-
-```r
-errorPlot_fields(DL1202_proofed, loc = "all")
-```
-
-<img src="figure/errorfieldsplotall-1.png" title="Figure 1. Plot of all location's errors by field name." alt="Figure 1. Plot of all location's errors by field name." width="500" style="display: block; margin: auto;" />
-
-... or it can be limited to just one.
-
-
-```r
-errorPlot_fields(DL1202_proofed, loc = "NC")
-```
-
-```
-## Error: Aesthetics must be either length 1 or the same as the data (1): x, y and label
-```
-
-<img src="figure/errorfieldsplotsc-1.png" title="Figure 2. Plot of all North Carolina's errors by field name." alt="Figure 2. Plot of all North Carolina's errors by field name." width="500" style="display: block; margin: auto;" />
-
-The year in which the HIP data were collected can also be specified in `errorPlot_fields` to visualize the proportion of "errors" created by youth hunters, since these values fall outside the expected parameters of the `proof` function. It is encouraged to use `specify` when error counts are high to increase transparency by revealing which errors are attributable to a specific cause. This feature should also help maintain confidence in the integrity of the data.
-
-
-```r
-errorPlot_fields(DL1202_proofed, specify = 2020)
-```
-
-<img src="figure/errorfieldsplotyouth-1.png" title="Figure 3. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." alt="Figure 3. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." width="500" style="display: block; margin: auto;" />
-
-It is possible to add any `ggplot2` components to these plots. For season total data specifically, the plot can be facet_wrapped using either dl_cycle or dl_date. The example below demonstrates how this package's functions can interact with the tidyverse and shows an example of an `errorPlot_fields` facet_wrap (using a subset of 4 download cycles)
-
-
-```r
-errorPlot_fields(
-  hipdata2020 %>%
-    filter(str_detect(dl_cycle, "0800|0901|0902|1001")),
-  specify = 2020) +
-  theme(
-    axis.text.x = element_text(angle = 90, vjust = 0, hjust = 1),
-    legend.position = "bottom") +
-  facet_wrap(~dl_cycle, ncol = 2)
-```
-
-
-
-### errorPlot_states
-
-The `errorPlot_states` function plots error proportions per state. You may optionally set a threshold value to only view states above a certain proportion of error. Bar labels are error counts.
-
-
-```r
-errorPlot_states(DL1202_proofed)
-```
-
-<img src="figure/errorplotstates-1.png" title="Figure 4. Plot of proportion of error by state." alt="Figure 4. Plot of proportion of error by state." width="500" style="display: block; margin: auto;" />
-
-### findDuplicates
-
-The `findDuplicates` function finds registrants that have more than one record. Registrations are grouped by first name, last name, city, state, birth date, and download state. If the same registrant has 2 or more records, the fields that are not identical are counted and summarized in a tibble and plot.
-
-
-```r
-findDuplicates(DL1202_proofed)
-```
-
-```
-## There are 72 registrations with duplicates; 144 total duplicated records.
-```
-
-<img src="figure/findDuplicates-1.png" title="Figure 6. Plot of types of duplicates." alt="Figure 6. Plot of types of duplicates." width="500" style="display: block; margin: auto;" />
-
-```
-## # A tibble: 18 x 2
-##    dupl                     count
-##    <chr>                    <int>
-##  1 address                      4
-##  2 address-email                1
-##  3 address-issue_date           1
-##  4 address-issue_date-email     1
-##  5 bag                         14
-##  6 email                        4
-##  7 issue_date                  33
-##  8 issue_date-email             1
-##  9 middle-address               1
-## 10 middle-address-email         2
-## 11 middle-issue_date            2
-## 12 middle-issue_date-email      1
-## 13 middle-zip-email             1
-## 14 registration_yr              2
-## 15 suffix                       1
-## 16 suffix-address-email         1
-## 17 suffix-issue_date            1
-## 18 zip                          1
-```
-
-### outOfStateHunters
-
-The `outOfStateHunters` function plots and tabulates how many hunters registered in a download state that does not match the state, province, or territory of their address. This function plots proportion of out-of-staters with counts as bar labels. The tibble contains counts and proportions by state.
-
-
-```r
-outOfStateHunters(DL1202_proofed)
-```
-
-<img src="figure/outofstate-1.png" title="Figure 8. Plot of proportions of out-of-state hunters." alt="Figure 8. Plot of proportions of out-of-state hunters." width="500" style="display: block; margin: auto;" />
-
-```
-## # A tibble: 30 x 3
-##    dl_state n_total outofstate_prop
-##    <chr>      <int>           <dbl>
-##  1 AK           106            0.41
-##  2 AL          7073            0.15
-##  3 AR          6569            0.65
-##  4 CA          3998            0.06
-##  5 CO          1749            0.09
-##  6 CT           114            0.1 
-##  7 FL          3657            0.09
-##  8 GA          3596            0.12
-##  9 IA          3236            0.05
-## 10 ID          1883            0.22
-## # ... with 20 more rows
-```
-
-### youthHunters
-
-The `youthHunters` function returns a table and plot of the number of hunters with birth dates < 16 years from the year of HIP data collection. These data are interesting to explore because hunters younger than 16 years of age are not required to have a migratory bird hunting license in the United States.
-
-
-```r
-youthHunters(DL1202_proofed, year = 2020)
-```
-
-<img src="figure/youth-1.png" title="Figure 9. Plot of proportions of youth hunters." alt="Figure 9. Plot of proportions of youth hunters." width="500" style="display: block; margin: auto;" />
-
-```
-## # A tibble: 3 x 4
-##   dl_state registered_youth total_registered youth_proportion
-##   <chr>               <int>            <int>            <dbl>
-## 1 MO                      1             4047         0.000247
-## 2 ND                    117              175         0.669   
-## 3 NE                      1              549         0.00182
-```
-
-### errorPlot_dl
-
-This function should not be used unless you want to visualize an entire season of data. The `errorPlot_dl` function plots proportion of error per download cycle across the year. Location may be specified to see a particular state over time.
-
-
-```r
-errorPlot_dl(hipdata2020, loc = "MI")
-```
-
-<img src="image/errorPlot_dl.png" title="errorPlot_dl example output" alt="errorPlot_dl example output" width="70%" style="display: block; margin: auto;" />
-
-## Stage 3: Explore Errors
-
-### investigate
-
-Did the `validate` function return repeated values? Are some of those values a high number that are uniform and need to be looked at more closely? The `investigate` function allows you to see what value was vertically repeated for a species. Parameters required are download state, type of download time period, value of the download date or download cycle, and species, which are all provided in the output of [validate](#validate).
-
-
-```r
-investigate(DL1202_tidied, loc = "TX", period_type = "dl_date", period = "20201216", species = "cranes")
-```
-
-```
-## # A tibble: 1 x 2
-##   cranes source_file   
-##   <chr>  <chr>         
-## 1 0      TX20201216.txt
-```
 
 ### errorTable
 
@@ -563,6 +403,165 @@ redFlags(DL1202_proofed, type = "field", threshold = 0.01)
 ## 3 ducks_bag          3113         90058     0.0334 error > 0.01
 ## 4 zip                2132         91039     0.0229 error > 0.01
 ```
+
+## Stage 3: Visualize Data
+
+### findDuplicates
+
+The `findDuplicates` function finds registrants that have more than one record. Registrations are grouped by first name, last name, city, state, birth date, and download state. If the same registrant has 2 or more records, the fields that are not identical are counted and summarized in a tibble and plot.
+
+
+```r
+findDuplicates(DL1202_proofed)
+```
+
+```
+## There are 72 registrations with duplicates; 144 total duplicated records.
+```
+
+<img src="figure/findDuplicates-1.png" title="Figure 1. Plot of types of duplicates." alt="Figure 1. Plot of types of duplicates." width="500" style="display: block; margin: auto;" />
+
+```
+## # A tibble: 18 x 2
+##    dupl                     count
+##    <chr>                    <int>
+##  1 address                      4
+##  2 address-email                1
+##  3 address-issue_date           1
+##  4 address-issue_date-email     1
+##  5 bag                         14
+##  6 email                        4
+##  7 issue_date                  33
+##  8 issue_date-email             1
+##  9 middle-address               1
+## 10 middle-address-email         2
+## 11 middle-issue_date            2
+## 12 middle-issue_date-email      1
+## 13 middle-zip-email             1
+## 14 registration_yr              2
+## 15 suffix                       1
+## 16 suffix-address-email         1
+## 17 suffix-issue_date            1
+## 18 zip                          1
+```
+
+### errorPlot_fields
+
+The `errorPlot_fields` function can be run on all states...
+
+
+```r
+errorPlot_fields(DL1202_proofed, loc = "all")
+```
+
+<img src="figure/errorfieldsplotall-1.png" title="Figure 2. Plot of all location's errors by field name." alt="Figure 2. Plot of all location's errors by field name." width="500" style="display: block; margin: auto;" />
+
+... or it can be limited to just one.
+
+
+```r
+errorPlot_fields(DL1202_proofed, loc = "NC")
+```
+
+```
+## Error: Aesthetics must be either length 1 or the same as the data (1): x, y and label
+```
+
+<img src="figure/errorfieldsplotsc-1.png" title="Figure 3. Plot of all North Carolina's errors by field name." alt="Figure 3. Plot of all North Carolina's errors by field name." width="500" style="display: block; margin: auto;" />
+
+The year in which the HIP data were collected can also be specified in `errorPlot_fields` to visualize the proportion of "errors" created by youth hunters, since these values fall outside the expected parameters of the `proof` function. It is encouraged to use `specify` when error counts are high to increase transparency by revealing which errors are attributable to a specific cause. This feature should also help maintain confidence in the integrity of the data.
+
+
+```r
+errorPlot_fields(DL1202_proofed, specify = 2020)
+```
+
+<img src="figure/errorfieldsplotyouth-1.png" title="Figure 4. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." alt="Figure 4. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." width="500" style="display: block; margin: auto;" />
+
+It is possible to add any `ggplot2` components to these plots. For season total data specifically, the plot can be facet_wrapped using either dl_cycle or dl_date. The example below demonstrates how this package's functions can interact with the tidyverse and shows an example of an `errorPlot_fields` facet_wrap (using a subset of 4 download cycles)
+
+
+```r
+errorPlot_fields(
+  hipdata2020 %>%
+    filter(str_detect(dl_cycle, "0800|0901|0902|1001")),
+  specify = 2020) +
+  theme(
+    axis.text.x = element_text(angle = 90, vjust = 0, hjust = 1),
+    legend.position = "bottom") +
+  facet_wrap(~dl_cycle, ncol = 2)
+```
+
+### errorPlot_states
+
+The `errorPlot_states` function plots error proportions per state. You may optionally set a threshold value to only view states above a certain proportion of error. Bar labels are error counts.
+
+
+```r
+errorPlot_states(DL1202_proofed)
+```
+
+<img src="figure/errorplotstates-1.png" title="Figure 5. Plot of proportion of error by state." alt="Figure 5. Plot of proportion of error by state." width="500" style="display: block; margin: auto;" />
+
+### outOfStateHunters
+
+The `outOfStateHunters` function plots and tabulates how many hunters registered in a download state that does not match the state, province, or territory of their address. This function plots proportion of out-of-staters with counts as bar labels. The tibble contains counts and proportions by state.
+
+
+```r
+outOfStateHunters(DL1202_proofed)
+```
+
+<img src="figure/outofstate-1.png" title="Figure 6. Plot of proportions of out-of-state hunters." alt="Figure 6. Plot of proportions of out-of-state hunters." width="500" style="display: block; margin: auto;" />
+
+```
+## # A tibble: 30 x 3
+##    dl_state n_total outofstate_prop
+##    <chr>      <int>           <dbl>
+##  1 AK           106            0.41
+##  2 AL          7073            0.15
+##  3 AR          6569            0.65
+##  4 CA          3998            0.06
+##  5 CO          1749            0.09
+##  6 CT           114            0.1 
+##  7 FL          3657            0.09
+##  8 GA          3596            0.12
+##  9 IA          3236            0.05
+## 10 ID          1883            0.22
+## # ... with 20 more rows
+```
+
+### youthHunters
+
+The `youthHunters` function returns a table and plot of the number of hunters with birth dates < 16 years from the year of HIP data collection. These data are interesting to explore because hunters younger than 16 years of age are not required to have a migratory bird hunting license in the United States.
+
+
+```r
+youthHunters(DL1202_proofed, year = 2020)
+```
+
+<img src="figure/youth-1.png" title="Figure 7. Plot of proportions of youth hunters." alt="Figure 7. Plot of proportions of youth hunters." width="500" style="display: block; margin: auto;" />
+
+```
+## # A tibble: 3 x 4
+##   dl_state registered_youth total_registered youth_proportion
+##   <chr>               <int>            <int>            <dbl>
+## 1 MO                      1             4047         0.000247
+## 2 ND                    117              175         0.669   
+## 3 NE                      1              549         0.00182
+```
+
+### errorPlot_dl
+
+This function should not be used unless you want to visualize an entire season of data. The `errorPlot_dl` function plots proportion of error per download cycle across the year. Location may be specified to see a particular state over time.
+
+
+```r
+errorPlot_dl(hipdata2020, loc = "MI")
+```
+
+<img src="image/errorPlot_dl.png" title="errorPlot_dl example output" alt="errorPlot_dl example output" width="70%" style="display: block; margin: auto;" />
+
 
 ## Stage 4: Correct and Compare
 
