--- a/README.Rmd
+++ b/README.Rmd
@@ -28,8 +28,9 @@ Tasks that can be accomplished with this package include:
 
 * `read_hip` imports data
 * `tidy` does basic reorganization tasks
-* `validate` checks for table-wide repetition
 * `strataCheck` identifies any new strata
+* `validate` checks for table-wide repetition
+* `investigate` reports details on repeated values
 * `proof` checks values for errors
 * `correct` systematically fixes erroneous values
 * `manualFix` lets the user fix any remaining unsatisfactory values
